--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
     @apply text-[16px] leading-[21.2px] text-black;
   }
   .input-container {
-    @apply flex items-center gap-2 border rounded-lg p-4;
+    @apply flex items-center gap-2 border rounded-lg px-[2%] p-4;
   }
   .flex-custom {
     @apply flex justify-between items-center;
